# buster

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
cmake/: AddBgfxShader.cmake
docs/: ase-file-specs.md
run_dir/images/: guy.ase
run_dir/shaders/: shader.hlsl
src/: CMakeLists.txt
src/app/: CMakeLists.txt  bgfx_callback.cpp  bgfx_callback.h  imgui_bgfx.cpp  imgui_bgfx.h  main.cpp
src/app/shaders/: fs_cubes.sc
src/core/: CMakeLists.txt  IPlatform.h  asefile.cpp  asefile.h  def.h  non_null.h  out_ptr.h  own_ptr.h  platform.h  platform_sdl2.cpp  platform_sdl2.h  platform_win32.cpp  scopeguard.h  simd.h  smart_ptr.h  string_builder.h  type_traits.h  typetraits.h  utils.cpp  utils.h
src/core/containers/: common.h  hashmap.h  list.h  pair.h  span.h  string.h  string_view.h  vector.h
src/main/: CMakeLists.txt  main.cpp
src/renderer/: CMakeLists.txt  imgui_bgfx.cpp  imgui_bgfx.h  renderer.h  renderer_bgfx.cpp  renderer_d3d11.cpp
